--- a/College_Assignment2.html
+++ b/College_Assignment2.html
@@ -8,27 +8,39 @@
 </head>
 <body>
     <div class="addition">
-        <span class="all-span">Enter First Number</span>  <input type="number" id="add_1" class="allclass" value="" placeholder="Enter the number">
-        <span class="all-span">Enter First Number</span> <input type="number" id="add_2" class="allclass" value="" placeholder="Enter the number">
-        <button onclick="Add()" id="add-btn">Add</button><input type="number" id="addition" class="all-result">
+        <span class="all-span">Enter First Number</span>
+        <input type="number" id="add_1" class="allclass" placeholder="Enter the number">
+        <span class="all-span">Enter Second Number</span>
+        <input type="number" id="add_2" class="allclass" placeholder="Enter the number">
+        <button onclick="Add()" id="add-btn">Add</button>
+        <input type="number" id="addition" class="all-result" readonly>
     </div>
     <div class="separation"></div>
     <div class="subtraction">
-        <span class="all-span">Enter First Number</span> <input type="number" id="subtract_1" class="allclass" value="" placeholder="Enter the number">
-        <span class="all-span">Enter Second Number</span> <input type="number" id="subtract_2" class="allclass" value="" placeholder="Enter the number">
-        <button onclick="Subtract()" id="add-btn">Sub</button><input type="number" id="subtraction" class="all-result">
+        <span class="all-span">Enter First Number</span>
+        <input type="number" id="subtract_1" class="allclass" placeholder="Enter the number">
+        <span class="all-span">Enter Second Number</span>
+        <input type="number" id="subtract_2" class="allclass" placeholder="Enter the number">
+        <button onclick="Subtract()" id="subtract-btn">Sub</button>
+        <input type="number" id="subtraction" class="all-result" readonly>
     </div>
     <div class="separation"></div>
     <div class="multiplication">
-        <span class="all-span">Enter First Number</span>  <input type="number" id="multiply_1" class="allclass" value="" placeholder="Enter the number">
-        <span class="all-span">Enter Second Number</span> <input type="number" id="multiply_2" class="allclass" value="" placeholder="Enter the number">
-        <button onclick="Multiply()" id="add-btn">Multiply</button><input type="number" id="multiplication" class="all-result">
+        <span class="all-span">Enter First Number</span>
+        <input type="number" id="multiply_1" class="allclass" placeholder="Enter the number">
+        <span class="all-span">Enter Second Number</span>
+        <input type="number" id="multiply_2" class="allclass" placeholder="Enter the number">
+        <button onclick="Multiply()" id="multiply-btn">Multiply</button>
+        <input type="number" id="multiplication" class="all-result" readonly>
     </div>
     <div class="separation"></div>
     <div class="division">
-        <span class="all-span">Enter First Number</span>  <input type="number" id="divide_1" class="allclass" value="" placeholder="Enter the number">
-        <span class="all-span">Enter Second Number</span> <input type="number" id="divide_2" class="allclass" value="" placeholder="Enter the number">
-        <button onclick="Divide()" id="add-btn">Divide</button><input type="number" id="division" class="all-result">
+        <span class="all-span">Enter First Number</span>
+        <input type="number" id="divide_1" class="allclass" placeholder="Enter the number">
+        <span class="all-span">Enter Second Number</span>
+        <input type="number" id="divide_2" class="allclass" placeholder="Enter the number">
+        <button onclick="Divide()" id="divide-btn">Divide</button>
+        <input type="number" id="division" class="all-result" readonly>
     </div>
     <script src="index.js"></script>
 </body>
